# MH-Wilds-Tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  EXPLAINATION.md  EXPLANATION.md  README.md  app.py  dev.ipynb  dev_mhw.ipynb  hello.py  optimized_header.md  pyproject.toml  requirements.txt  solver.py  test_pydoll.ipynb
data/: armor_pieces.parquet  charms.parquet  jewels.parquet  quests.parquet  talents.parquet  weapons.parquet
src/MH_Wilds_tools/: app.py  display.py  entrypoints.py  scraper.py  solver.py
