[project]
name = "mh-wilds-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.20.1",
    "ipykernel>=6.29.5",
    "ortools>=9.12.4544",
    "polars>=1.24.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
]
