[project]
name = "mh-wilds-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.20.1",
    "icecream>=2.1.4",
    "ipykernel>=6.29.5",
    "ortools>=9.12.4544",
    "polars>=1.24.0",
    "pre-commit>=4.1.0",
    "prompt-toolkit>=3.0.50",
    "pyarrow>=19.0.1",
    "pydoll-python>=1.5.1",
    "rich>=13.9.4",
    "ruff>=0.9.10",
    "tabulate>=0.9.0",
]


[project.scripts]
app = "MH_Wilds_tools.app:main"
scraper = "MH_Wilds_tools.entrypoints:entrypoint"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.uv]
package = true
